--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vanilla-tilt": "^1.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "husky": "^4.3.8",
